--- a/MorseCode/app/src/main/AndroidManifest.xml
+++ b/MorseCode/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.morsecode">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera2" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MorseCode">
-        <activity android:name=".InfoMorseActivity"></activity>
+        <activity android:name=".test_main"></activity>
+        <activity android:name=".InfoMorseActivity" />
         <activity android:name=".MainMorseActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
