--- a/MorseCode/app/src/main/AndroidManifest.xml
+++ b/MorseCode/app/src/main/AndroidManifest.xml
@@ -3,19 +3,20 @@
     package="com.example.morsecode">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera2" />
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/morse_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/morse_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MorseCode">
-        <activity android:name=".test_main"></activity>
-        <activity android:name=".InfoMorseActivity" />
+        <activity android:name=".DecryptMorseActivity"></activity>
         <activity android:name=".MainMorseActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
